completed navbar, started home section

--- a/assests/css/custom.css
+++ b/assests/css/custom.css
@@ -10771,50 +10771,183 @@ body {
   color: #f2f8fe;
 }
 
-.my-navbar {
-  background-color: #070d1a;
+a {
+  text-decoration: none;
   color: #f2f8fe;
-  font-family: "abel", sans-serif;
-  font-size: 30px;
 }
 
-.my-container {
+.my__header {
   display: flex;
-  flex-wrap: inherit;
+  align-items: center;
+  position: relative;
+  padding: 15px;
+}
+
+.my__container {
+  position: relative;
+  display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.my__navbar {
+  background-color: rgba(22, 29, 44, 0.95);
+  color: #f2f8fe;
+  font-family: "Abel", sans-serif;
+  font-size: 17px;
+  font-family: mukta, sans-serif;
+  width: 300px;
+  z-index: 997;
+  top: 0;
+  bottom: 0;
+  right: -300px;
+  position: fixed;
+  transition: 0.3s ease-in-out;
+}
+.my__navbar ul {
+  display: block;
+  list-style: none;
+  padding: 20px 10px;
+}
+.my__navbar ul li {
+  list-style: none;
+  padding: 15px 20px;
+  font-weight: 500;
+}
+.my__navbar ul li a {
+  color: #f2f8fe;
+  text-decoration: none;
+}
+.my__navbar ul li a:hover {
+  color: #f2f8fe;
+  cursor: pointer;
+}
+
+.my__navbar.show {
+  right: 0;
+}
+
+.my__container {
   width: 100%;
   margin: auto;
   padding: 0 1rem;
 }
 
-.my-logo {
+.my__logo {
   color: #f2f8fe;
   text-decoration: none;
   font-family: abel, sans-serif;
   font-size: 30px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  display: flex;
+  align-items: center;
 }
-.my-logo:hover {
+.my__logo:hover {
   color: #f2f8fe;
+  cursor: pointer;
 }
 
-.sidebar {
+.my__toggle {
   position: fixed;
-  top: 0;
-  right: 0;
-  width: 300px;
-  height: 100%;
-  background-color: #151D2B;
-  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
-  transition: right 0.3s ease-in-out;
-  z-index: 1050;
+  right: 10px;
+  top: 20px;
+  font-size: 36px;
+  transition: 0.3s ease-in-out;
 }
 
-.sidebar.show {
-  right: 0;
+.my__toggle.show {
+  right: 310px;
 }
 
-.nav-link {
-  padding: 10px 0;
-  font-weight: 500;
+.home {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 20px;
+  padding-bottom: 80px;
+  min-height: 100vh;
+}
+.home .container {
+  position: relative;
+}
+.home__subtitle {
+  margin-bottom: 1.5rem;
+  position: relative;
+  display: inline-block;
+}
+.home__subtitle span {
+  font-size: 1rem;
+  font-weight: 700;
+  letter-spacing: 3px;
+  padding-bottom: 3px;
+  position: relative;
+}
+.home__title {
+  font-size: 4.5rem;
+  line-height: 1.1;
+  font-weight: 800;
+  margin-bottom: 2rem;
+  letter-spacing: -1px;
+  font-family: "Abel", sans-serif;
+  margin-top: 0;
+}
+.home__description {
+  font-size: 1.05rem;
+  line-height: 1.7;
+  margin-bottom: 2.5rem;
+}
+.home__description p {
+  margin-bottom: 1rem;
+}
+.home__buttons {
+  display: flex;
+  gap: 1.25rem;
+}
+.home__buttons .primary-btn, .home__buttons .secondary-btn {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #10a3d7;
+  color: #f2f8fe;
+  padding: 1rem 2rem;
+  font-weight: 600;
+  border-radius: 50px;
+  transition: all 0.3s ease;
+}
+.home__buttons .primary-btn i, .home__buttons .secondary-btn i {
+  margin-left: 8px;
+  font-size: 0.85rem;
+  transition: transform 0.3s ease;
+}
+.home__buttons .secondary-btn {
+  background-color: #070d1a;
+  border: 1px solid #f2f8fe;
+}
+.home__img__wrapper {
+  width: 100%;
+  max-width: 600px;
+  margin: auto;
+  padding: 0 20px;
+}
+.home__img__wrapper .home__image {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+.home__img__wrapper .floating__element {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: #131825;
+}
+.home__img__wrapper .floating__element .top__left {
+  top: -20px;
+  left: -20px;
+  animation-delay: 0.5s;
 }/*# sourceMappingURL=custom.css.map */
